test/parser/string_literal/invalid_escape_error.exp
Error: Invalid escape sequence, expected `"`, `\`, `n`, `t`, `r`, or `x`
test/parser/string_literal/invalid_escape_error.myte:4:8
 4 |   "asdf\a";
   |         ^